--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "moment": "^2.24.0",
+    "random": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
